# rmv_bckgrnd_bot

./: .env  README.md  base_sqlite_id.sql  config.py  get_bgr_bot.py  pyproject.toml  rmv_bgrnd.py  work_sqlite.py
