[tool.poetry]
name = "character_test_bot"
version = "0.1.0"
description = ""
authors = ["Yaroslav Galiulin <yaroslav66@list.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
python-telegram-bot = "20.7"
pyTelegramBotAPI = "^4.14.0"
rembg = "^2.0.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
